<resources>
    <string name="app_name">Easy Pay</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="phone">Phone</string>
    <string name="email">Email Id</string>
    <string name="aadhar">Aadhar No</string>
    <string name="register">Register</string>
    <string name="recharge">Recharge</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="contacts">Contacts</string>
    <string name="mobile">Mobile No</string>
    <string name="pay">Pay</string>
    <string name="amount">Amount</string>
    <string name="unable_to_load_firmware">Unable to load Firmware</string>
    <string name="load_firmware_success">Firmware successfully loaded</string>
    <string name="unable_to_initialize_device">Unable to initialize device</string>
    <string name="device_initialization_success">Device successfully initialized</string>
    <string name="scanning">Scanning</string>
    <string name="id">Id</string>
    <string name="details">My Profile</string>
    <string name="add_money">Add Money</string>
    <string name="transfer_money">Transfer</string>
    <string name="enter_amount">Enter Amount:</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="enter_username_or_mobile_number">Email / Mobile Number / Username</string>
    <string name="key">User</string>
    <string name="transfer">Transfer</string>
    <string name="available_balance">Available Balance</string>
    <string name="register_service">Register Service</string>
    <string name="start_service">Start Service</string>
    <string name="start">Start</string>
    <string name="service">Service</string>
    <string name="deny">Deny</string>
    <string name="confirm">Confirm</string>
    <string name="fingerprint">Fingerprint</string>
</resources>
