<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mobile"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"/>

        <EditText
            android:inputType="phone"
            android:hint="@null"
            android:id="@+id/phone"
            android:lines="1"
            android:importantForAutofill="no"
            android:layout_marginEnd="10dp"
            android:layout_width="150dp"
            android:layout_height="45dp"/>

        <ImageView
            android:onClick="contacts"
            android:src="@drawable/ic_contacts_black"
            android:clickable="true"
            android:id="@+id/contact_view"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:focusable="true"
            android:contentDescription="@string/contacts" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"/>

        <EditText
            android:layout_marginStart="15dp"
            android:inputType="phone"
            android:lines="1"
            android:hint="@null"
            android:id="@+id/amount"
            android:importantForAutofill="no"
            android:layout_marginEnd="10dp"
            android:layout_width="150dp"
            android:layout_height="45dp"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:onClick="pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"/>

</LinearLayout>